force-app/main/default/objects/sma__MALocation__c/sma__MALocation__c.object-meta.xml
<CustomObject>
    <label>MapAnything Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>