force-app/main/default/objects/sma__MALocation__c/fields/sma__FavoriteMarker__c.field-meta.xml
<CustomField>
    <fullName>sma__FavoriteMarker__c</fullName>
    <label>Favorite Marker</label>
    <type>TextArea</type>
</CustomField>