force-app/main/default/objects/sma__MALocation__c/fields/sma__Folder__c.field-meta.xml
<CustomField>
    <fullName>sma__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>sma__MALocationFolder__c</referenceTo>
    <relationshipLabel>Locations</relationshipLabel>
    <relationshipName>Locations</relationshipName>
    <type>Lookup</type>
</CustomField>