force-app/main/default/objects/sma__MALocation__c/fields/sma__IsEnd__c.field-meta.xml
<CustomField>
    <fullName>sma__IsEnd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is End</label>
    <type>Checkbox</type>
</CustomField>