force-app/main/default/objects/sma__MALocation__c/fields/sma__IsSchedule__c.field-meta.xml
<CustomField>
    <fullName>sma__IsSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Schedule</label>
    <type>Checkbox</type>
</CustomField>