force-app/main/default/objects/sma__MALocation__c/fields/sma__Latitude__c.field-meta.xml
<CustomField>
    <fullName>sma__Latitude__c</fullName>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>