force-app/main/default/objects/sma__MALocation__c/fields/sma__MapAnythingFolder__c.field-meta.xml
<CustomField>
    <fullName>sma__MapAnythingFolder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MapAnything Folder</label>
    <referenceTo>sma__MAFolder__c</referenceTo>
    <relationshipLabel>MapAnything Locations</relationshipLabel>
    <relationshipName>MapAnythingLocations</relationshipName>
    <type>Lookup</type>
</CustomField>