force-app/main/default/objects/sma__MALocation__c/fields/sma__ResourceId__c.field-meta.xml
<CustomField>
    <fullName>sma__ResourceId__c</fullName>
    <label>Resource Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>