force-app/main/default/objects/sma__MALocation__c/fields/sma__User__c.field-meta.xml
<CustomField>
    <fullName>sma__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MALocations</relationshipName>
    <type>Lookup</type>
</CustomField>